# public-energy-dashboard

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
assets/: style.css
docs/: index.md
docs/reference/components/: consumption_plots.md  cost_plots.md  filter_objects.md  gen_content_obj.md  layout.md  line_fig.md  power_plots.md  submeter_plots.md  summary_plot.md
docs/reference/data/: index.md  loader.md  metadata.md
docs/reference/tabs/: consumption_tab.md  cost_tab.md  general_tab.md  index.md  overview_tab.md  power_tab.md
docs/reference/utils/: IDS.md  page_text.md
site/: 404.html  index.html  objects.inv
site/reference/components/: index.html
site/reference/components/consumption_plots/: index.html
site/reference/components/cost_plots/: index.html
site/reference/components/filter_objects/: index.html
site/reference/components/gen_content_obj/: index.html
site/reference/components/layout/: index.html
site/reference/components/line_fig/: index.html
site/reference/data/: index.html
site/reference/tabs/: index.html
site/search/: search_index.json
src/components/: consumption_plots.py  cost_plots.py  filter_objects.py  gen_content_obj.py  layout.py  line_fig.py  power_plots.py  sidebar.py  submeter_plots.py  summary_plot.py
src/data/: duos_data.csv  elec_hh_data.csv  electric_invoice_data.csv  gas_hh_data.csv  gas_invoice_data.csv  loader.py  metadata.py
src/tabs/: consumption_tab.py  cost_tab.py  general_tab.py  overview_tab.py  power_tab.py
src/utils/: IDS.py  page_text.py  schema.py
(+14 files in other folders)
